# taiga_tools

./: .gitignore  Cargo.toml  README.md
taiga_cli/: Cargo.toml
taiga_cli/src/: cli_args.rs  cli_initialize.rs  cli_storage.rs  main.rs
taiga_lib/: Cargo.toml
taiga_lib/src/: lib.rs  lib_models.rs  lib_routes.rs  lib_test_utils.rs  routes.rs
taiga_tauri/: Cargo.toml
taiga_tauri/src-tauri/: Cargo.toml  tauri.conf.json
