[package]
name = "taiga_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
taiga_lib = { path = "../taiga_lib" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
toml = "0.5.11"
rpassword = "7.2"
log = "0.4.0"
dotenv="0.15.0"