[package]
name = "taiga_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0"
dotenv = "0.15.0"
log = "0.4.0"
lazy_static = "1.4.0"
chrono = "0.4.23"
